syntax = "proto3";

option java_package = "com.example.smartwatermonitoring";
option java_outer_classname = "WaterMonitoringServiceProto";

package proto;

message WaterQualityParameters {
  double ph = 1;
  double temperature = 2;
  double turbidity = 3;
  double dissolved_oxygen_level = 4;
}

message WaterQualityThresholds {
  double ph_threshold = 1;
  double temperature_threshold = 2;
  double turbidity_threshold = 3;
  double dissolved_oxygen_level_threshold = 4;
}

message WaterQualityHistory {
  repeated WaterQualityParameters water_quality_parameters = 1;
}

message GetWaterQualityRequest {
}

message SetWaterQualityThresholdsRequest {
  WaterQualityThresholds water_quality_thresholds = 1;
}

message SetWaterQualityThresholdsResponse {
  string status = 1;
}

message GetWaterQualityHistoryRequest {
  int32 start_time = 1;
  int32 end_time = 2;
}

service WaterMonitoringService {
  rpc GetWaterQuality (GetWaterQualityRequest) returns (WaterQualityParameters) {}
  rpc SetWaterQualityThresholds (SetWaterQualityThresholdsRequest) returns (SetWaterQualityThresholdsResponse) {}
  rpc GetWaterQualityHistory (GetWaterQualityHistoryRequest) returns (WaterQualityHistory) {}
}